Implementa o laço for e instrução import com sucesso com seus testes funcionais